manifests/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        environment: ssr01
