manifests/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: "api.dev.sensorenregister.amsterdam.nl"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app
                port:
                  number: 8000
  tls:
    - hosts:
        - api.dev.sensorenregister.amsterdam.nl
      secretName: tls
